<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android UDOO rover</string>
    <string name="action_pairing">Myo pairing</string>
    <string name="rover_controller">Rover controller</string>
    <string name="rover_modes">Rover modes</string>
    <string name="rover_speed">Speed: </string>
    <string name="twitter">Enable Twitter commands</string>
    <string name="direction">Direction</string>
    <string name="not_online">Connection not available!</string>
    <string name="start_fetching">Fetch started</string>
    <string name="stop_fetching">Fetch stopped</string>
    <string name="start_execution">Command execution started</string>
    <string name="direction_forward">Direction forward</string>
    <string name="direction_backward">Direction backward</string>
    <string name="direction_right">Direction right</string>
    <string name="direction_left">Direction left</string>

</resources>
