<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainLayout"
    android:orientation="vertical"
    tools:context="me.palazzetti.adkrover.RoverActivity">

    <TextView
        style="@style/SectionHeader"
        android:text="@string/rover_controller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <LinearLayout
        style="@style/SectionLayout"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_weight=".5"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_direction"
                style="@style/Title"
                android:text="@string/direction" />

            <ImageButton
                android:src="@drawable/arrow_up"
                android:contentDescription="@string/direction_forward"
                android:id="@+id/cmd_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_direction"
                android:layout_centerHorizontal="true"
                android:onClick="goForward" />

            <ImageButton
                android:src="@drawable/arrow_back"
                android:contentDescription="@string/direction_backward"
                android:id="@+id/cmd_backward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cmd_left"
                android:layout_toRightOf="@+id/cmd_left"
                android:onClick="goBackward" />

            <ImageButton
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/direction_right"
                android:id="@+id/cmd_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cmd_forward"
                android:layout_toRightOf="@+id/cmd_forward"
                android:onClick="turnRight" />

            <ImageButton
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/direction_left"
                android:id="@+id/cmd_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cmd_forward"
                android:layout_toLeftOf="@+id/cmd_forward"
                android:onClick="turnLeft" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="110dp">

            <TextView
                style="@style/Title"
                android:id="@+id/speed_text"
                android:text="@string/rover_speed"/>

            <SeekBar
                android:id="@+id/speed_bar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="400" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/SectionHeader"
        android:text="@string/rover_modes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <LinearLayout
        style="@style/SectionLayout"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:text="@string/twitter"
            android:drawableLeft="@drawable/twitter_logo_small"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startTwitterCommandsFetch"/>

    </LinearLayout>

</LinearLayout>
